# PolySolve

./: LICENSE  polysolve.py  pyproject.toml
polysolve/: __init__.py  polysolve.py
