[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polysolve"
authors = [{name = "Alex Sampson", email = "alex.sampson@live.co.uk"}]
requires-python = ">= 3.8"
readme = "README.md"
description = ""
license = {text = "BSD-3-Clause"}

keywords = []
dependencies = ["numpy"]
classifiers = []
dynamic = ["version"]

[project.urls]
Homepage="https://github.com/ASampsonMu31/PolySolve"
Repository="https://github.com/ASampsonMu31/PolySolve.git"

[tool.setuptools.dynamic]
version = {attr = "polysolve.__version__"}
